welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: '(' expected but identifier found.
  for i <- 0 to taille-1 {
      ^Array1:8: error: illegal start of simple expression
} 
^